possible fix for textboxes overflowing

--- a/conference/www/css/style.css
+++ b/conference/www/css/style.css
@@ -157,6 +157,10 @@ div.profile-telephone > div {
 div.edit-profession {
 	position: relative;
 	margin-top: 10px;
+  width: auto;
+}
+div.edit-name {
+  width: auto;
 }
 
 div.edit-profession > h2 {
